src/main/java/com/example/demo/Dto/Error/Response/EntityNotFoundResponse.java
package com.example.demo.Dto.Error.Response;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class EntityNotFoundResponse {
    private String code;
    private String message;
}
